# mcp-solana-dex

./: .env  README.md  manim-animation.py  pyproject.toml
data/: order_book.json
mcp_solana_dex/: __init__.py  server.py
tests/: __init__.py
tests/integration/: __init__.py  conftest.py  test_cancel_order.py  test_create_order.py  test_execute_order.py  test_get_orders.py  test_server.py
